--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,8 +8,17 @@
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
+      <h1>Kun Chen Portfolio</h1>
+      <p>Hi! My name is Kun</p>
+      <p>I am a student from University of Michigan-Ann Arbor studying Computer Science and Economics.</p>
+      <p>This is the photo I took in the Google headquarter when I was in primary school.</p>
+      <img src="Image/1.jpg"/>
+      <p>Current me</p>
+      <img src="Image/2.jpg"/>
+      <p>Google in Boston</p>
+      <img src="Image2/3.jpg"/>
+      <p>Click <a href="https://github.com/kunchen7">here</a> to see my GitHub profile!</p>
+      <p>I have not finishing my Linkedin Profile, but I will update it immediately when my profile is ready!</p>
       <p>Click <a href="/hello">here</a> to see content created by server code.</p>
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
