YOUR COMMIT MESSAGE

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,22 +7,40 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <div id="content">
-      <h1>Kun Chen Portfolio</h1>
+    <div id="head">
+      <h1>Kun Chen</h1>
+  </div>
+      <div id="content">
       <p>Hi! My name is Kun</p>
-      <p>I am a student from University of Michigan-Ann Arbor studying Computer Science and Economics.</p>
+      <p>You can also call me Kevin if you want</p>
+      <p>I come from Shanghai, China</p>
+      <p>I am now a rising junior from University of Michigan-Ann Arbor studying Computer Science and Economics.</p>
       <p>This is the photo I took in the Google headquarter when I was in primary school.</p>
-      <img src="Image/1.jpg"/>
+      <img src="Image/1.jpg"
+      width="300"
+      height="400"/>
       <p>Current me</p>
-      <img src="Image/2.jpg"/>
+      <img src="Image/2.jpg"
+      width="300"
+      height="400"/>
       <p>Google in Boston</p>
-      <img src="Image2/3.jpg"/>
+      <img src="Image2/3.jpg"
+      width="400"
+      height="300"/>
+      <p>Most of the projects I did are school projects</p>
+      <p>The first project I did is Calculate Maximum Drawdown when I interned at a securities company</p>
+      <p>First time touching Computer Science and coding and making a project, causing me to study Computer Science in college</p>
+      <p>And I would say Euchre is the most diffcult project I ever did</p>
+      <img src="Image/Euchre1.jpeg"
+      width="400"
+      height="300"/>
+      <p>Before I finsihed doing this project, I hate this card game!></p>
+      <p>After I finsihed all the debugging, I love this game! Hahaha!</p>
       <p>Click <a href="https://github.com/kunchen7">here</a> to see my GitHub profile!</p>
       <p>I have not finishing my Linkedin Profile, but I will update it immediately when my profile is ready!</p>
-      <p>Click <a href="/hello">here</a> to see content created by server code.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+      <p>Click here to get a fact about me:</p>
+      <button onclick="addRandomGreeting()">Click</button>
     </div>
+      <div id="greeting-container"></div>
   </body>
 </html>
