--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -14,7 +14,17 @@
       <p>Hi! My name is Kun</p>
       <p>You can also call me Kevin if you want</p>
       <p>I come from Shanghai, China</p>
+      <img src="Image/IMG-3089.jpg"
+      width="300"
+      height="400"/>
       <p>I am now a rising junior from University of Michigan-Ann Arbor studying Computer Science and Economics.</p>
+      <img src="Image/IMG-2826.JPG"
+      width="300"
+      height="400"/>
+      <img src="Image/IMG-3884.jpg"
+      width="300"
+      height="400"/>
+      <p>I enjoy playing soccer and now have some interests in baseball. I also enjoy watching movie, listen to the music in my spare time</p>
       <p>This is the photo I took in the Google headquarter when I was in primary school.</p>
       <img src="Image/1.jpg"
       width="300"
@@ -29,15 +39,16 @@
       height="300"/>
       <p>Most of the projects I did are school projects</p>
       <p>The first project I did is Calculate Maximum Drawdown when I interned at a securities company</p>
-      <p>First time touching Computer Science and coding and making a project, causing me to study Computer Science in college</p>
+      <p>First time touching Computer Science and coding and making a project, arousing my interest in studying Computer Science in college</p>
       <p>And I would say Euchre is the most diffcult project I ever did</p>
       <img src="Image/Euchre1.jpeg"
       width="400"
       height="300"/>
-      <p>Before I finsihed doing this project, I hate this card game!></p>
+      <p>Before I finsihed doing this project, I hate this card game!</p>
       <p>After I finsihed all the debugging, I love this game! Hahaha!</p>
       <p>Click <a href="https://github.com/kunchen7">here</a> to see my GitHub profile!</p>
       <p>I have not finishing my Linkedin Profile, but I will update it immediately when my profile is ready!</p>
+      <p>Click <a href="photo.html">here </a> to see more photos of my daily life</p>
       <p>Click here to get a fact about me:</p>
       <button onclick="getRandomFact()">Click</button>
     </div>
